--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -74,7 +74,7 @@
         android:orientation="vertical"
         android:layout_weight="10">
         <Button
-            android:id="@+id/btnSignUp"
+            android:id="@+id/btnVerifyOtp"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginHorizontal="40dp"
