--- a/app/src/main/res/layout/row_item_chat_list.xml
+++ b/app/src/main/res/layout/row_item_chat_list.xml
@@ -24,7 +24,7 @@
             android:layout_marginHorizontal="16dp"
             app:civ_border_color="@color/i_stroke"
             app:civ_border_width="1dp"
-            android:src="@tools:sample/avatars"
+            tools:src="@tools:sample/avatars"
              />
 
         <LinearLayout
