--- a/app/src/main/res/layout/row_item_chat_list.xml
+++ b/app/src/main/res/layout/row_item_chat_list.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
-    android:paddingRight="16dp"
-    android:background="@drawable/bg_chat_list"
+    android:paddingRight="8dp"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
@@ -13,7 +13,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:paddingHorizontal="10dp"
         android:paddingVertical="5dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -30,7 +29,6 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
             android:layout_weight="1"
             android:paddingVertical="5dp"
             android:gravity="center"
@@ -44,17 +42,26 @@
                 tools:text="Dr. Black Jack"
                 android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
 
-            <TextView
-                android:id="@+id/tvChatItemContent"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="5dp"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:maxLines="2"
-                android:ellipsize="end"
-                android:text=""
-                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
+                android:orientation="horizontal"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tvChatItemContent"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:text=" this is new message jnfs fjsadf jnsfka "
+                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
+                <TextView
+                    android:id="@+id/tvChatItemTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="14:58"/>
+            </LinearLayout>
         </LinearLayout>
 
 
