--- a/app/src/main/res/layout/row_item_chat_message.xml
+++ b/app/src/main/res/layout/row_item_chat_message.xml
@@ -8,7 +8,7 @@
     <com.group2.bookstoreproject.base.customView.CustomChatMessage
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:leftBackGroundColor="@android:color/holo_blue_dark"
+        app:leftBackGroundColor="@color/i_gray"
         app:rightBackGroundColor="@color/i_blue"
         app:startDirection="false"
         app:messageContent="Test"
