--- a/app/src/main/res/layout/fragment_update_profile.xml
+++ b/app/src/main/res/layout/fragment_update_profile.xml
@@ -103,6 +103,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tilDateOfBirth" />
 
         <Button
+            android:id="@+id/btnCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="40dp"
