--- a/app/src/main/res/layout/row_item_chat_list.xml
+++ b/app/src/main/res/layout/row_item_chat_list.xml
@@ -46,7 +46,7 @@
                     android:layout_weight="1"
                     android:textSize="18sp"
                     tools:text="Dr. Black Jack"
-                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
+                    android:textStyle="bold" />
                 <TextView
                     android:id="@+id/tvChatItemTime"
                     android:layout_width="wrap_content"
@@ -63,7 +63,7 @@
                     android:maxLines="1"
                     android:ellipsize="end"
                     android:text=" this is new message jnfs fjsadf jnsfka "
-                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />
+                    />
 
             </LinearLayout>
 
