--- a/app/src/main/res/layout/fragment_order_list.xml
+++ b/app/src/main/res/layout/fragment_order_list.xml
@@ -3,12 +3,172 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.common.orderList.OrderListFragment">
+    tools:context=".ui.common.orderList.OrderListFragment"
+    android:background="@color/navigation_color">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+<!--    <Button-->
+<!--        android:id="@+id/btnAdd"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Add order"-->
+<!--        android:visibility="visible"/>-->
+    <!-- Title -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:background="@color/bg_gray">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:text="Đơn hàng"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:gravity="center" />
+
+    <!-- Horizontal ScrollView for Tabs -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <!-- Horizontal ScrollView for Tabs -->
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_horizontal">
+
+                    <TextView
+                        android:id="@+id/tabAllDonHang"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp"
+                        android:text="danh sách đơn hàng"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorPrimary"
+                        android:background="?attr/selectableItemBackground"
+                        android:gravity="center"
+                        android:onClick="onTabClicked" />
+
+                    <View
+                        android:id="@+id/indicatorDanhSachDonHang"
+                        android:layout_width="match_parent"
+                        android:layout_height="4dp"
+                        android:background="#FFA500"
+                        android:visibility="visible" />
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_horizontal">
+
+                    <TextView
+                        android:id="@+id/tabDangDoiGiao"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp"
+                        android:text="đang đợi giao"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        android:background="?attr/selectableItemBackground"
+                        android:gravity="center"
+                        android:onClick="onTabClicked" />
+
+                    <View
+                        android:id="@+id/indicatorDangDoiGiao"
+                        android:layout_width="match_parent"
+                        android:layout_height="4dp"
+                        android:background="#FFA500"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_horizontal">
+
+                    <TextView
+                        android:id="@+id/tabDaHoanThanh"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp"
+                        android:text="đã hoàn thành"
+                        android:textSize="16sp"
+                        android:textColor="@android:color/black"
+                        android:background="?attr/selectableItemBackground"
+                        android:gravity="center"
+                        android:onClick="onTabClicked" />
+
+                    <View
+                        android:id="@+id/indicatorDaHoanThanh"
+                        android:layout_width="match_parent"
+                        android:layout_height="4dp"
+                        android:background="#FFA500"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_gravity="center_horizontal">
+
+                    <TextView
+                        android:id="@+id/tabHuyDonHang"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="16dp"
+                        android:text="hủy đơn hàng"
+                        android:textSize="16sp"
+                        android:textColor="@android:color/black"
+                        android:background="?attr/selectableItemBackground"
+                        android:gravity="center"
+                        android:onClick="onTabClicked" />
+
+                    <View
+                        android:id="@+id/indicatorHuyDonHang"
+                        android:layout_width="match_parent"
+                        android:layout_height="4dp"
+                        android:background="#FFA500"
+                        android:visibility="gone" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </HorizontalScrollView>
+    </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view_order"
+            android:layout_width="match_parent"
+            android:layout_height="530dp"
+            android:layout_marginTop="12dp"
+            android:layout_weight="1" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+    </LinearLayout>
+
 
 </FrameLayout>
