--- a/app/src/main/res/layout/fragment_book_manager.xml
+++ b/app/src/main/res/layout/fragment_book_manager.xml
@@ -6,9 +6,38 @@
     tools:context=".ui.admin.bookManager.BookManagerFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <include
+        android:id="@+id/emptyBookLayout"
+        layout="@layout/fragment_book_manager_empty"
+        android:visibility="gone" />
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:padding="16dp">
 
+        <include
+            android:id="@+id/search_view"
+            layout="@layout/custom_search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewBook"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="80dp"/>
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add"
+        android:contentDescription="Add book"/>
 </FrameLayout>
