--- a/app/src/main/res/layout/item_list_orders_detail.xml
+++ b/app/src/main/res/layout/item_list_orders_detail.xml
@@ -1,57 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:id="@+id/tvShopName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Phụ kiện Aha Case"
-        android:textStyle="bold"
-        android:layout_marginBottom="8dp"
-        tools:ignore="MissingConstraints" />
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/ivProductImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher_background"
-        android:layout_marginBottom="8dp"
-        tools:ignore="MissingConstraints" />
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/icon_sign" />
 
-    <TextView
-        android:id="@+id/tvProductName"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Tai Nghe Gaming Nhét Tai HiFi Có Dây S2000"
-        android:layout_marginBottom="4dp"
-        tools:ignore="MissingConstraints" />
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp">
 
-    <TextView
-        android:id="@+id/tvProductPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="₫79.000"
-        android:textStyle="bold"
-        android:layout_marginBottom="4dp"
-        tools:ignore="MissingConstraints" />
+        <TextView
+            android:id="@+id/tvBookName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Product Name"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/tvShippingFee"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="₫28.800"
-        android:layout_marginBottom="8dp"
-        tools:ignore="MissingConstraints" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tvTotalPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="₫107.800"
-        android:textStyle="bold"
-        android:layout_marginBottom="8dp"
-        tools:ignore="MissingConstraints" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tvAuthor"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Product Description" />
+
+            <TextView
+                android:id="@+id/tvProductOriginalPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Original Price"
+                android:layout_gravity="end" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/tvProductPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Price"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_gravity="end" />
+    </LinearLayout>
+</LinearLayout>
