--- a/app/src/main/res/layout/fragment_order_list.xml
+++ b/app/src/main/res/layout/fragment_order_list.xml
@@ -19,17 +19,48 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/bg_gray">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text="Đơn hàng"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:gravity="center" />
 
-    <!-- Horizontal ScrollView for Tabs -->
-    <LinearLayout
+        <!-- Horizontal ScrollView for Tabs -->
+        <LinearLayout
+            android:id="@+id/header_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="8dp"
+            android:gravity="center_vertical"
+            android:elevation="4dp"
+            android:background="@color/white">
+
+            <ImageButton
+                android:id="@+id/back_button"
+                android:layout_width="23dp"
+                android:layout_height="33dp"
+                android:src="@drawable/ic_arrow_back_ios_new_24px"
+                android:background="@color/white"/>
+
+            <TextView
+                android:id="@+id/header_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Đơn hàng"
+                android:fontFamily="@font/app_font_medium"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:visibility="visible"/>
+
+        </LinearLayout>
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center"-->
+<!--            android:padding="16dp"-->
+<!--            android:text="Đơn hàng"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:textSize="20sp" />-->
+
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -154,6 +185,11 @@
             </LinearLayout>
         </HorizontalScrollView>
     </LinearLayout>
+
+        <include
+            android:id="@+id/emptyOrderLayout"
+            layout="@layout/fragment_order_empty"
+            android:visibility="gone" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_order"
